force-app/main/default/objects/AcctSeed__Bank_Rule_Action__c/fields/AcctSeed__Bank_Rule__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Bank_Rule__c</fullName>
    <label>Bank Rule</label>
    <referenceTo>AcctSeed__Bank_Rule__c</referenceTo>
    <relationshipLabel>Bank Rule Actions</relationshipLabel>
    <relationshipName>Bank_Rule_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>