force-app/main/default/objects/AcctSeed__Bank_Rule_Action__c/fields/AcctSeed__Target_Field__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Target_Field__c</fullName>
    <label>Target Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>