force-app/main/default/objects/AcctSeed__Bank_Rule_Action__c/fields/AcctSeed__Value__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Value__c</fullName>
    <label>Value</label>
    <length>510</length>
    <type>LongTextArea</type>
</CustomField>